--- a/index.html
+++ b/index.html
@@ -431,44 +431,45 @@
 
       <!-- ========Постійні клієнти======== -->
 
-      <!-- <section class="customers customers__section">
-        <div class="customers__container">
-          
-            <h2 class="customers__title">Постійні клієнти</h2>
-            <ul class="customers__list">
-              <li>
-                <a class="customers__link" href="">
-                  <svg class="customers__icon" width="106" height="60">
-                    <use href="./images/css_images/icons.svg#Logo_yago"></use></svg></a>
-                  </li>
-              <li>
-                <a class="customers__link" href="">
-                  <svg class="customers__icon" width="106" height="60">
-                    <use href="./images/css_images/icons.svg#Logo_company_tagline"></use></svg></a
-              ></li>
-              <li
-                ><a class="customers__link" href=""
-                  ><svg class="customers__icon" width="106" height="60">
-                    <use href="./images/css_images/icons.svg#Logo_company"></use></svg></a
-              ></li>
-              <li
-                ><a class="customers__link" href=""
-                  ><svg class="customers__icon" width="106" height="60">
-                    <use href="./images/css_images/icons.svg#Logo_foster_peters"></use></svg></a
-              ></li>
-              <li
-                ><a class="customers__link" href=""
-                  ><svg class="customers__icon" width="106" height="60">
-                    <use href="./images/css_images/icons.svg#Logo_brand"></use></svg></a
-              ></li>
-              <li
-                ><a class="customers__link" href=""
-                  ><svg class="customers__icon" width="106" height="60">
-                    <use href="./images/css_images/icons.svg#logo_tag_line"></use></svg></a
-              ></li>
+      <section class="customers customers__section">
+        <div class="customers container">
+          <h2 class="customers__title">Постійні клієнти</h2>
+          <ul class="customers__list">
+            <li>
+              <a class="customers__link" href="">
+                <svg class="customers__icon" width="106" height="60">
+                  <use href="./images/css_images/icons.svg#Logo_yago"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="customers__link" href="">
+                <svg class="customers__icon" width="106" height="60">
+                  <use href="./images/css_images/icons.svg#Logo_company_tagline"></use></svg></a
+            ></li>
+            <li
+              ><a class="customers__link" href=""
+                ><svg class="customers__icon" width="106" height="60">
+                  <use href="./images/css_images/icons.svg#Logo_company"></use></svg></a
+            ></li>
+            <li
+              ><a class="customers__link" href=""
+                ><svg class="customers__icon" width="106" height="60">
+                  <use href="./images/css_images/icons.svg#Logo_foster_peters"></use></svg></a
+            ></li>
+            <li
+              ><a class="customers__link" href=""
+                ><svg class="customers__icon" width="106" height="60">
+                  <use href="./images/css_images/icons.svg#Logo_brand"></use></svg></a
+            ></li>
+            <li
+              ><a class="customers__link" href=""
+                ><svg class="customers__icon" width="106" height="60">
+                  <use href="./images/css_images/icons.svg#logo_tag_line"></use></svg></a
+            ></li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!--========Футер=======-->
