--- a/index.html
+++ b/index.html
@@ -474,8 +474,8 @@
 
     <!--========Футер=======-->
 
-    <!-- <footer class="footer footer__content">
-      <div class="footer__container">
+    <footer class="footer footer__content">
+      <div class="footer container">
         <div>
           <a href="./index.html" class="footer__logo logo">
             <span class="logo__accent">Web</span><span class="footer__logo--white">Studio</span>
@@ -498,11 +498,11 @@
               </li>
             </ul>
         </div>
-        </address> -->
+        </address>
 
     <!-- ========Footer-social======== -->
 
-    <!-- <div class="footer-social">
+    <div class="footer-social">
           <p class="join-text">приєднуйтесь</p>
           <ul class="join-site">
               <li class="list">
@@ -553,11 +553,11 @@
               </a>
             </li>
           </ul>
-        </div> -->
+        </div>
 
     <!-- ========Footer-form======-->
 
-    <!-- <div class="footer-form">
+    <div class="footer-form">
           <p class="join-text">Підпишіться на розсилку</p>
           <form class="footer-form-registre">
             <label class="footer-form-field">
@@ -570,7 +570,7 @@
             </button>
           </form>
         </div>
-      </div> -->
+      </div>
 
     <!-- </footer> -->
     <script src="./js/model.js"></script>
