--- a/index.html
+++ b/index.html
@@ -474,9 +474,9 @@
 
     <!--========Футер=======-->
 
-    <footer class="footer footer__content">
-      <div class="footer container">
-        <div>
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__address">
           <a href="./index.html" class="footer__logo logo">
             <span class="logo__accent">Web</span><span class="footer__logo--white">Studio</span>
             </a>
