--- a/index.html
+++ b/index.html
@@ -476,84 +476,87 @@
 
     <footer class="footer">
       <div class="footer__container">
-        <div class="footer__address">
-          <a href="./index.html" class="footer__logo logo">
-            <span class="logo__accent">Web</span><span class="footer__logo--white">Studio</span>
-            </a>
-          <address class="address address__content">
-            <ul class="address__list">
-              <li class="address__item">
-                <a class="adress__link adress__link--white"
-                  href="https://goo.gl/maps/xovK9vbRF6YMRpcX9"
+        <div class="flex">
+          <div class="footer__address">
+            <a href="./index.html" class="footer__logo logo">
+              <span class="logo__accent">Web</span><span class="footer__logo--white">Studio</span>
+              </a>
+            <address class="address address__content">
+              <ul class="address__list">
+                <li class="address__item">
+                  <a class="adress__link adress__link--white"
+                    href="https://goo.gl/maps/xovK9vbRF6YMRpcX9"
+                    target="_blank"
+                    rel="noreferrer noopener"
+                    >м.Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li class="address-item">
+                  <a class="adress__link linka" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a>
+                </li>
+                <li class="address-item">
+                  <a class="adress__link linka" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+          </div>
+          </address>
+  
+      <!-- ========Footer-social======== -->
+  
+      <div class="footer-social">
+            <p class="join-text">приєднуйтесь</p>
+            <ul class="join-site">
+                <li class="list">
+                  <a
+                  class="footersoc-link"
+                  href="https://www.instagram.com/"
                   target="_blank"
                   rel="noreferrer noopener"
-                  >м.Київ, пр-т Лесі Українки, 26</a>
-              </li>
-              <li class="address-item">
-                <a class="adress__link linka" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a>
-              </li>
-              <li class="address-item">
-                <a class="adress__link linka" href="tel:+380961111111">+38 096 111 11 11</a>
-              </li>
-            </ul>
-        </div>
-        </address>
-
-    <!-- ========Footer-social======== -->
-
-    <div class="footer-social">
-          <p class="join-text">приєднуйтесь</p>
-          <ul class="join-site">
+                  aria-label="Instagram">
+                  <svg class="fotersoc-icon" width="20" height="20">
+                    <use href="./images/css_images/icons.svg#instagram"></use>
+                  </svg></a>
+                </li>
               <li class="list">
                 <a
-                class="footersoc-link"
-                href="https://www.instagram.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="Instagram">
-                <svg class="fotersoc-icon" width="20" height="20">
-                  <use href="./images/css_images/icons.svg#instagram"></use>
-                </svg></a>
+                  class="footersoc-link"
+                  href="https://twitter.com/"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  aria-label="Twitter">
+                  <svg class="fotersoc-icon" width="20" height="20">
+                    <use href="./images/css_images/icons.svg#twitter"></use>
+                  </svg>
+                </a>
               </li>
-            <li class="list">
-              <a
-                class="footersoc-link"
-                href="https://twitter.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="Twitter">
-                <svg class="fotersoc-icon" width="20" height="20">
-                  <use href="./images/css_images/icons.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="list">
-              <a
-                class="footersoc-link"
-                href="https://www.facebook.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="Facebook">
-                <svg class="fotersoc-icon" width="20" height="20">
-                  <use href="./images/css_images/icons.svg#facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="list">
-              <a
-                class="footersoc-link"
-                href="https://www.linkedin.com/"
-                target="_blank"
-                rel="noreferrer noopener"
-                aria-label="Linkedin">
-                <svg class="fotersoc-icon" width="20" height="20">
-                  <use href="./images/css_images/icons.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+              <li class="list">
+                <a
+                  class="footersoc-link"
+                  href="https://www.facebook.com/"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  aria-label="Facebook">
+                  <svg class="fotersoc-icon" width="20" height="20">
+                    <use href="./images/css_images/icons.svg#facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="list">
+                <a
+                  class="footersoc-link"
+                  href="https://www.linkedin.com/"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  aria-label="Linkedin">
+                  <svg class="fotersoc-icon" width="20" height="20">
+                    <use href="./images/css_images/icons.svg#linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
+        
 
     <!-- ========Footer-form======-->
 
