--- a/index.html
+++ b/index.html
@@ -54,26 +54,15 @@
                 <use href="./images/css_images/icons.svg#smartphone"></use>
               </svg>+38 096 111 11 11</a></li>
         </ul>
-
-        <button class="menu-button js-open-menu" type="button"
-        aria-expanded="false"
-        aria-controls="mobile-menu">
-          <svg width="40" height="40"><use href="./images/css_images/icons.svg#menu-open"></use>
-          </svg>
-        </button>
-        <div class="menu-container js-menu-container" id="mobile-menu">
-          <button class="menu-toggle js-close-menu">
-            <svg width="40" height="40"><use href="./images/css_images/icons.svg#menu-close"></use>
+        <button
+            class="menu-btn js-open-menu"
+            type="button"
+            aria-expanded="false"
+            aria-controls="mobile-menu">
+            <svg width="40" height="40">
+              <use href="./images/css_images/icons.svg#menu-open"></use>
             </svg>
           </button>
-        
-          <ul class="mobile-menu">
-            <li><a href="" class="link">About</a></li>
-            <li><a href="" class="link">Products</a></li>
-            <li><a href="" class="link">Contacts</a></li>
-            <li><a href="" class="link">Career</a></li>
-          </ul>
-        </div>
       </div>
 
       
@@ -215,7 +204,7 @@
 
       <!--=========Команда==========-->
 
-      <!-- <section class="team team__section">
+      <section class="team team__section">
         <div class="team__container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -451,7 +440,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- ========Постійні клієнти======== -->
 
@@ -602,10 +591,42 @@
     </footer>
 
 <!-- ====Mobil Menu -->
+<div class="menu-container js-menu-container" id="mobile-menu">
+  <button class="menu-toggle js-close-menu">
+    <svg width="40" height="40">
+      <use href="./images/css_images/icons.svg#menu-close"></use>
+    </svg>
+  </button>
 
+  <ul class="mobile-menu list">
+    <li>
+      <a href="" class="link">Студія</a>
+    </li>
+    <li>
+      <a href="" class="link">Портфоліо</a>
+    </li>
+    <li>
+      <a href="" class="link">Контакти</a>
+    </li>
+  </ul>
 
+  <ul class="list">
+    <li>
+      <a href="" class="link">+38 096 111 11 11</a>
+    </li>
+    <li>
+      <a href="" class="link">info@devstudio.com</a>
+    </li>
+  </ul>
 
-<script src="./js/model.js"></script>
+  <ul class="mobile-socials list">
+    <li><a href="" class="link">Instagram </a></li>
+    <li><a href="" class="link">Twitter</a></li>
+    <li><a href="" class="link">Facebook</a></li>
+    <li><a href="" class="link">LinkedIn</a></li>
+  </ul>
+</div>
+
 <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
@@ -613,5 +634,7 @@
       crossorigin="anonymous"
     ></script>
     <script defer src="./js/mobile-menu.js"></script>
+
+<script src="./js/model.js"></script>
   </body>
 </html>
