--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
     <header class="header">
       <div class="container header__container">
-          
-        
+        <a href="./index.html" class="logo__head logo nav__logo"><span class="logo__accent">Web</span>Studio</a>
         <nav class="nav">
           <a href="./index.html" class="logo nav__logo"><span class="logo__accent">Web</span>Studio</a>
           <ul class="nav__list">
