--- a/portfolio.html
+++ b/portfolio.html
@@ -114,12 +114,12 @@
                     type="image/jpg">
 
                     <!-- Mobile -->
-                    <source media="(max-width: 767px)" 
-                    srcset="./images/portfolio/img_ms-1@x.jpg 1x, ./images/portfolio/img_ms-2@x.jpg 2x"
-                    type="image/jpg">
+                    <source media="(min-width: 480px)" 
+                    srcset="./images/portfolio/img_ms-1@x.jpg 1x, ./images/portfolio/img_ms-2@x.webp 2x"
+                    type="image/webp">
 
-                    <source media="(max-width: 767px)" 
-                    srcset="./images/portfolio/img_ms-1@x.jpg 1x, ./images/portfolio/img_ms-2@x.jpg 2x"
+                    <source media="(min-width: 480px)" 
+                    srcset="./images/portfolio/img_ms-1@x.jpg 1x, ./images/portfolio/img_ms-2@x.webp 2x"
                     type="image/jpg">
 
                     <img class="products__img" src="./images/portfolio/img_md-@1x.jpg" alt="Відкритий ноутбук"/>
