--- a/portfolio.html
+++ b/portfolio.html
@@ -624,10 +624,10 @@
 
   <ul class="mobile-menu">
     <li class="mobile-menu__item">
-      <a href="./index.html" class="mobile__link current">Студія</a>
+      <a href="./index.html" class="mobile__link">Студія</a>
     </li>
     <li class="mobile-menu__item">
-      <a href="./portfolio.html" class="mobile__link">Портфоліо</a>
+      <a href="./portfolio.html" class="mobile__link current">Портфоліо</a>
     </li>
     <li class="mobile-menu__item">
       <a href="" class="mobile__link">Контакти</a>
