--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <!--=========Переваги==========-->
 
       <section class="advances advances__section">
-        <div class="advances container">
+        <div class="advances__container">
           <h2 class="advances__hidden">Переваги </h2>
           <ul class="advances__list">
             <li class="advances__item">
