--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <!-- Mobile -->
                 <source media="(min-width: 480px)" srcset="./images/team/img_ms-@1x-1.jpg 1x, ./images/team/img_ms-@2x-1.jpg 2x">
 
-                <img src="./images/team/img_ms-@1x-1.jpg" alt="фото працівника, Ольга Рєпіна"/>
+                <img src="./images/team/img_ms-@1x-1.jpg" alt="фото працівника, Ольга Рєпіна" width="450"/>
               </picture>
               <div class="socials">
                 <h3 class="socials__headline">Ольга Рєпіна</h3>
