--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                 <use href="./images/css_images/icons.svg#envelope"></use>
               </svg>info@devstudio.com</a></li>
           <li class="contacts__item">
-            <a class="contacts__link" href="tel:+380961111111">
+            <a class="contacts__link contacts__link--margin" href="tel:+380961111111">
               <svg class="contacts__icon" width="10" height="16">
                 <use href="./images/css_images/icons.svg#smartphone"></use>
               </svg>+38 096 111 11 11</a></li>
