--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                 <!-- Mobile -->
                 <source media="(min-width: 480px)" srcset="./images/team/img_ms-@1x-2.jpg 1x, ./images/team/img_ms-@2x-2.jpg 2x">
 
-                <img src="./images/team/img_ms-@1x-2.jpg" alt="фото працівника, Микола Тарасов"/>
+                <img src="./images/team/img_ms-@1x-2.jpg" alt="фото працівника, Микола Тарасов" width="450"/>
               </picture>
               
               <div class="socials">
@@ -420,7 +420,7 @@
                 <!-- Mobile -->
                 <source media="(min-width: 480px)" srcset="./images/team/img_ms-@1x-3.jpg 1x, ./images/team/img_ms-@2x-3.jpg 2x">
 
-                <img src="./images/team/img_ms-@1x-3.jpg" alt="фото працівника, Михайло Єрмаков"/>
+                <img src="./images/team/img_ms-@1x-3.jpg" alt="фото працівника, Михайло Єрмаков" width="450"/>
               </picture>
               
               <div class="socials">
